-refactor:代码规范化收尾-常量类私有构造/List.of/清理未使用import