@@ -1,9 +1,10 @@
 package com.gao.yydyc.constant;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ImageConstant {
+    private ImageConstant() {}
+
     public static final long MAX_FILE_SIZE = 5 * 1024 * 1024;
-    public static final List<String> ALLOWED_SUFFIXES = Arrays.asList("jpg", "jpeg", "png");
+    public static final List<String> ALLOWED_SUFFIXES = List.of("jpg", "jpeg", "png");
 }
