@@ -1,11 +1,10 @@
 package com.gao.yydyc.constant;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ToolConstants {
+    private ToolConstants() {}
 
-    public static final List<String> USER_ID_ONLY = Arrays.asList("userId");
-    public static final List<String> USER_ID_AND_MONTH = Arrays.asList("userId", "month");
-
+    public static final List<String> USER_ID_ONLY = List.of("userId");
+    public static final List<String> USER_ID_AND_MONTH = List.of("userId", "month");
 }
